--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="80dp"
         android:autofillHints="@string/prompt_username"
         android:hint="@string/prompt_username"
         android:inputType="textEmailAddress"
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/button_container"
+        app:layout_constraintBottom_toTopOf="@id/bt_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quickIPContainer">
@@ -115,6 +115,27 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="@string/defaultPort" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bt_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/button_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quickPortContainer">
+
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="328dp"
+            android:layout_height="80dp"
+            tools:ignore="MissingConstraints">
+
+        </ListView>
     </LinearLayout>
 
     <LinearLayout
@@ -128,9 +149,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quickPortContainer">
+        app:layout_constraintTop_toBottomOf="@+id/bt_container">
 
-        <Button
+
+    <Button
             android:id="@+id/login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -145,6 +167,7 @@
             android:layout_weight="1"
             android:enabled="false"
             android:text="@string/action_register" />
+
     </LinearLayout>
 
     <ProgressBar
@@ -160,5 +183,6 @@
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
