--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".data.model.ui.train.login.LoginActivity">
 
     <ImageView
@@ -16,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,12 +23,12 @@
 
     <TextView
         android:id="@+id/appName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="50sp"
-        android:textStyle="bold"
+        android:layout_width="332dp"
+        android:layout_height="72dp"
         android:layout_marginTop="@dimen/nav_header_vertical_spacing"
+        android:text="@string/app_name"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appIcon" />
@@ -39,7 +37,7 @@
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:autofillHints="@string/prompt_username"
         android:hint="@string/prompt_username"
         android:inputType="textEmailAddress"
@@ -64,14 +62,32 @@
         />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="407dp"
+        app:layout_constraintTop_toBottomOf="@+id/password">
+
+        <TextView
+            android:id="@+id/textViewSelectDevice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Select Device"
+            app:layout_constraintTop_toBottomOf="@+id/password"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/quickIPContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/password"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/quickPortContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/quickPortContainer">
+        app:layout_constraintTop_toBottomOf="@id/password">
 
         <TextView
             android:layout_width="0dp"
@@ -85,9 +101,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:ems="10"
+            android:ems="5"
             android:inputType="textPersonName"
             android:text="@string/defaultIp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -95,7 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/bt_container"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quickIPContainer">
@@ -119,26 +136,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bt_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/button_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quickPortContainer">
-
-
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="328dp"
-            android:layout_height="80dp"
-            tools:ignore="MissingConstraints">
-
-        </ListView>
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -149,10 +146,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_container">
+        app:layout_constraintTop_toBottomOf="@+id/quickPortContainer">
 
 
-    <Button
+        <Button
             android:id="@+id/login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -170,6 +167,19 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/bt_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_container">
+
+
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
@@ -183,6 +193,20 @@
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="328dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/quickIPContainer"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="29dp">
+
+    </ListView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
