--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:autofillHints="@string/prompt_username"
         android:hint="@string/prompt_username"
         android:inputType="textEmailAddress"
@@ -61,6 +61,16 @@
         app:layout_constraintTop_toBottomOf="@+id/username"
         />
 
+    <TextView
+        android:id="@+id/textViewSelectDevice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_weight="1"
+        android:text="Please select device"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        tools:layout_editor_absoluteX="16dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -69,13 +79,6 @@
         tools:layout_editor_absoluteY="407dp"
         app:layout_constraintTop_toBottomOf="@+id/password">
 
-        <TextView
-            android:id="@+id/textViewSelectDevice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Select Device"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
     </LinearLayout>
 
     <LinearLayout
@@ -198,7 +201,7 @@
         android:id="@+id/listview"
         android:layout_width="328dp"
         android:layout_height="80dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/quickIPContainer"
         app:layout_constraintTop_toBottomOf="@+id/password"
