--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -145,11 +145,14 @@
                 android:gravity="center|start"
                 android:text="@string/deviceLabel" />
 
-            <Spinner
+            <TextView
                 android:id="@+id/spinner"
+                style="@android:style/Widget.EditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2" />
+                android:layout_weight="2"
+                android:background="@null"
+                android:text="@string/passwordPlaceholder" />
 
         </LinearLayout>
 
@@ -206,47 +209,6 @@
                     android:layout_weight="2"
                     android:background="@null"
                     android:text="@string/defaultUserName" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/passwordLabel"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center|start"
-                    android:text="@string/passwordLabel" />
-
-                <EditText
-                    android:id="@+id/passwordText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    android:text="@string/passwordPlaceholder"/>
-
-                <ImageButton
-                    android:id="@+id/changePasswordButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
-                    android:backgroundTint="@color/purple_200"
-                    android:src="@drawable/baseline_edit_24" />
-
-                <ImageButton
-                    android:id="@+id/showPasswordButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/purple_200"
-                    android:layout_weight="0.4"
-                    android:src="@drawable/password_button_selector" />
 
             </LinearLayout>
 
